--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <main>
     <header>
-      <h1>Título do Site</h1>
+      <h1>Curso Grátis</h1>
     </header>
     <article>
-      <h2>Artigo 001</h2>
-      <p>Texto Artigo 001</p>
+      <h2>Curso de HTML5 com CSS3</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio fugit accusamus, similique ipsa quam nemo accusantium neque dolorem, voluptatum beatae enim blanditiis dignissimos doloremque veniam corrupti in architecto ratione iusto!</p>
     </article>
     <article>
-      <h2>Artigo 002</h2>
-      <p>Texto Artigo 002</p>
+      <h2>Curso de JS</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex consectetur autem pariatur laudantium labore nostrum ipsum voluptatum repellendus exercitationem? Dignissimos quisquam veniam rem ullam maxime maiores, alias earum hic recusandae</p>
     </article>
   </main>
 </body>
